--- a/pertemuan10/pertemuan10a/app/src/main/res/layout/activity_tampilan.xml
+++ b/pertemuan10/pertemuan10a/app/src/main/res/layout/activity_tampilan.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tampilan">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Latihan Persistanance"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:layout_marginBottom="20sp"/>
+
+    <Button
+        android:id="@+id/bInternal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="INTERNAL STORAGE"
+        android:onClick="Klik_Internal"/>
+
+    <Button
+        android:id="@+id/bExternal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="EXTERNAL STORAGE"
+        android:onClick="Klik_External"/>
+
+</LinearLayout>
