--- a/pertemuan10/project1/app/src/main/res/layout/activity_insert_and_view.xml
+++ b/pertemuan10/project1/app/src/main/res/layout/activity_insert_and_view.xml
@@ -72,6 +72,7 @@
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="Simpan"/>
     </LinearLayout>
 </LinearLayout>
