--- a/pertemuan15/app/src/main/res/menu/optionmenu.xml
+++ b/pertemuan15/app/src/main/res/menu/optionmenu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/tambah"
+        android:title="Tambah Data" />
+    <item
+        android:id="@+id/list"
+        android:title="List Data" />
+    <item
+        android:id="@+id/keluar"
+        android:title="Keluar" />
 </menu>
